2007-12-12  Roland Mas  <lolando@debian.org>

	* setup: Look for CVS and Subversion repositories in
	/var/lib/gforge/chroot, if they're not found in the root
	directory.

2007-12-11  Roland Mas  <lolando@debian.org>

	* common/include/Group.class.php: Include realname and username of
	the person who requests a project in the email sent to the admins.
	* www/admin/approve-pending.php: Ditto, in the list of pending
	projects.

2007-12-06  Roland Mas  <lolando@debian.org>

	* plugins/scmsvn/cronjobs/snapshots.sh: Change interpreter to bash
	since the script uses behaviour not implemented by all /bin/sh
	variants.
	* plugins/scmcvs/cronjobs/snapshots.sh: Ditto.

2007-11-30  Roland Mas  <lolando@debian.org>

	* www/admin/useredit.php: Removed undefined variable warning.

	* www/account/register.php: Fix a syntax error, use appropriate
	functions to get data from the server.

	* deb-specific/install-nsspgsql.sh: Adapted to new configuration
	syntax for libnss-pgsql2.

2007-11-28  Roland Mas  <lolando@debian.org>

	* www/admin/index.php: Removed links to the language
	administration tools.
	* www/admin/languages/: Removed that directory, now unused.
	* deb-specific/db-upgrade.pl: Delete related tmp_lang if it
	exists.

2007-11-27  Roland Mas  <lolando@debian.org>

	* common/include/gettext.php: Renamed from
	www/include/BaseLanguage.class.php.  Almost entirely rewritten, to
	finish the gettext transition.
	* Lots of changes all over the place, accordingly.  No more
	$Language, no more getText(), no more *.tab files.

2007-11-24  Roland Mas  <lolando@debian.org>

	* www/news/submit.php: Removed undefined index warning.

	* etc/httpd.d/06maindirhttp: Setup alias directive for /fckeditor/
	in case it's installed system-wide.
	* etc/httpd.d/07maindirhttp.ssl: Ditto.

	* plugins/fckeditor/common/fckeditorPlugin.class.php: Add run-time
	detection of an FCKeditor installed system-wide.  Use it when
	present, otherwise keep using the local copy.
