@@ -5,8 +5,10 @@ gforge (4.6.99+svn6313+something-0) UNRELEASED; urgency=low
     without it anyway.
   * Updated gforge-shell-postgresql dependency to point to openssh-server
     rather than ssh.  Also added a recommendation on nscd.
+  * Updated the list of registered themes to match what's actually
+    available (closes: #395026).
 
- -- Roland Mas <lolando@debian.org>  Wed, 12 Dec 2007 11:41:00 +0100
+ -- Roland Mas <lolando@debian.org>  Wed, 12 Dec 2007 13:42:41 +0100
 
 gforge (4.6.99+svn6313-1) unstable; urgency=low
 
